--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
                                 <i class='bx bxs-star bx-sm text-warning'></i>
                                 <i class='bx bxs-star bx-sm text-warning'></i>
                             </div>
-                            <p class="thirdy-font fs-4 fw-normal text-black text-center text-sm-start my-lg-5 my-4">“Quisque in lacus a urna
+                            <p class="thirdy-font fs-4 fw-normal text-black text-center text-sm-start my-lg-5 my-4">
+                                “Quisque in lacus a urna
                                 fermentum
                                 euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit
                                 sit amet turpis nec”
@@ -340,7 +341,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div style="border-radius: 16px 0 0 0;width: 132px; height: 60px;" class="d-flex z-1 align-items-center justify-content-center bg-white rounded-top-right-1 position-absolute end-0 bottom-0">
+                                <div style="border-radius: 16px 0 0 0;width: 132px; height: 60px;"
+                                    class="d-flex z-1 align-items-center justify-content-center bg-white rounded-top-right-1 position-absolute end-0 bottom-0">
                                     <div class="swiper-button-next" style="top: 38px;">
                                         <i class='bx bx-chevron-right'></i>
                                     </div>
@@ -349,8 +351,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <img src="./img/svgs/greenCircle.svg" class="big-circle position-absolute d-lg-block d-none z-n1" alt="">
-                            <img src="./img/svgs/plus.svg" class="plusAnimation z-1 position-absolute d-none d-lg-block" alt="">
+                            <img src="./img/svgs/greenCircle.svg"
+                                class="big-circle position-absolute d-lg-block d-none z-n1" alt="">
+                            <img src="./img/svgs/plus.svg" class="plusAnimation z-1 position-absolute d-none d-lg-block"
+                                alt="">
                         </div>
                     </div>
                 </div>
@@ -425,8 +429,66 @@
         </section>
     </main>
 
-
-
+    <!--=============== Footer ===============-->
+    <footer class="footer">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between flex-wrap row-gap-4 column-gap-3 column-gap-sm-0">
+                <div class="d-flex flex-column align-items-start">
+                    <a href="#" class="text-primary fw-bold fs-4 d-flex align-items-center"><img
+                            src="./img/svgs/site-logo.svg" class="me-2" alt="">Tour</a>
+                    <p style="max-width: 391px; width: 100%;" class="fs-18px thirdy-font fw-light footer-text-color mb-5 pb-xl-2 pt-xl-3 pt-2 mt-3">Plan and
+                        book your perfect trip with
+                        expert advice, travel tips destination
+                        information from us</p>
+                    <p class="footer-text-color thirdy-font fs-6 fw-light">©2020 Thousand Sunny. All rights reserved</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <h5 class="fs-5 fw-bold text-black mb-4 thirdy-font">Destinations</h5>
+                    <ul class="d-flex flex-column row-gap-2">
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Africa</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Antarctica</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Asia</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Europa</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">America</a></li>
+                    </ul>
+                </div>
+                <div class="d-flex flex-column">
+                    <h5 class="fs-5 fw-bold text-black mb-4 thirdy-font">Shop</h5>
+                    <ul class="d-flex flex-column row-gap-2">
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Destination Guides</a>
+                        </li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Pictorial & Gifts</a>
+                        </li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Special Offers</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Delivery Times</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">FAQs</a></li>
+                    </ul>
+                </div>
+                <div class="d-flex flex-column">
+                    <h5 class="fs-5 fw-bold text-black mb-4 thirdy-font">Interests</h5>
+                    <ul class="d-flex flex-column row-gap-2">
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Adventure Travel</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Art And Culture</a></li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Wildlife And Nature</a>
+                        </li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">EFamily Holidaysuropa</a>
+                        </li>
+                        <li><a href="#" class="fw-light fs-18px thirdy-font footer-text-color">Food And Drink</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex align-items-center column-gap-3">
+                    <a href="#"><img src="img/svgs/social-logo-1.svg" alt=""></a>
+                    <a href="#"><img src="img/svgs/social-logo-2.svg" alt=""></a>
+                    <a href="#"><img src="img/svgs/social-logo-3.svg" alt=""></a>
+                    <a href="#"><img src="img/svgs/social-logo-4.svg" alt=""></a>
+                    <a href="#"><img src="img/svgs/social-logo-5.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
