--- a/index.html
+++ b/index.html
@@ -432,15 +432,17 @@
     <!--=============== Footer ===============-->
     <footer class="footer">
         <div class="container">
-            <div class="d-flex align-items-center justify-content-between flex-wrap row-gap-4 column-gap-3 column-gap-sm-0">
+            <div
+                class="d-flex align-items-center justify-content-between flex-wrap row-gap-4 column-gap-3 column-gap-sm-0">
                 <div class="d-flex flex-column align-items-start">
                     <a href="#" class="text-primary fw-bold fs-4 d-flex align-items-center"><img
                             src="./img/svgs/site-logo.svg" class="me-2" alt="">Tour</a>
-                    <p style="max-width: 391px; width: 100%;" class="fs-18px thirdy-font fw-light footer-text-color mb-5 pb-xl-2 pt-xl-3 pt-2 mt-3">Plan and
+                    <p style="max-width: 391px; width: 100%;"
+                        class="fs-18px thirdy-font fw-light footer-text-color mb-5 pb-xl-2 pt-xl-3 pt-2 mt-3">Plan and
                         book your perfect trip with
                         expert advice, travel tips destination
                         information from us</p>
-                    <p class="footer-text-color thirdy-font fs-6 fw-light">©2020 Thousand Sunny. All rights reserved</p>
+                    <p class="footer-text-color thirdy-font fs-6 fw-light">©2024 Thousand Sunny. All rights reserved</p>
                 </div>
                 <div class="d-flex flex-column">
                     <h5 class="fs-5 fw-bold text-black mb-4 thirdy-font">Destinations</h5>
